force-app/main/default/objects/Temporal_Eventos_Fechas__c/Temporal_Eventos_Fechas__c.object-meta.xml
<CustomObject>
    <label>Temporal Evento Fecha</label>
    <nameField>
        <label>Temporal Evento Fecha</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Eventos Fechas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>