force-app/main/default/objects/Temporal_Eventos_Fechas__c/fields/Fecha_Carga__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Carga__c</fullName>
    <label>Fecha_Carga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>