force-app/main/default/objects/Temporal_Eventos_Fechas__c/fields/MA_FECHAS__c.field-meta.xml
<CustomField>
    <fullName>MA_FECHAS__c</fullName>
    <label>MA_FECHAS</label>
    <type>Date</type>
</CustomField>