force-app/main/default/objects/Temporal_Eventos_Fechas__c/fields/MA_NUMACT__c.field-meta.xml
<CustomField>
    <fullName>MA_NUMACT__c</fullName>
    <label>MA_NUMACT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>