force-app/main/default/objects/Temporal_Eventos_Fechas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MA_NUMACT__c</columns>
    <columns>MA_FECHAS__c</columns>
    <columns>Fecha_Carga__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>